// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`OakDownloadCard matches snapshot with fileSizeSlot 1`] = `
.c0 {
  overflow: hidden;
  width: 100%;
  color: #222222;
  background: #ffffff;
  border: 0.125rem solid;
  border-radius: 0.25rem;
  font-family: --var(google-font),Lexend,sans-serif;
  overflow: hidden;
}

.c4 {
  font-family: --var(google-font),Lexend,sans-serif;
}

.c6 {
  padding: 0.75rem;
  background: #ffe555;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c8 {
  position: relative;
  width: 3rem;
  min-width: 3rem;
  height: 3rem;
  min-height: 3rem;
  display: block;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c10 {
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.75rem;
  padding-bottom: 0.75rem;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c12 {
  font-family: --var(google-font),Lexend,sans-serif;
  font-weight: 500;
  font-size: 1rem;
  line-height: 1.5rem;
  -webkit-letter-spacing: -0.005rem;
  -moz-letter-spacing: -0.005rem;
  -ms-letter-spacing: -0.005rem;
  letter-spacing: -0.005rem;
}

.c13 {
  color: #575757;
  font-family: --var(google-font),Lexend,sans-serif;
  font-weight: 300;
  font-size: 0.875rem;
  line-height: 1.25rem;
  -webkit-letter-spacing: -0.005rem;
  -moz-letter-spacing: -0.005rem;
  -ms-letter-spacing: -0.005rem;
  letter-spacing: -0.005rem;
}

.c15 {
  padding-right: 1rem;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c17 {
  position: relative;
  width: 1.5rem;
  height: 1.5rem;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c23 {
  position: absolute;
  top: 0rem;
  left: 0rem;
  width: 1.5rem;
  height: 1.5rem;
  padding: 0rem;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c25 {
  position: relative;
  width: 100%;
  min-width: 100%;
  height: 100%;
  min-height: 100%;
  display: block;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  gap: 0.25rem;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.5rem;
}

.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c19 {
  -webkit-appearance: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
  margin: 0;
  outline: none;
  border: 0.125rem solid;
  border-color: #222222;
  border-radius: 0.125rem;
  width: 1.5rem;
  height: 1.5rem;
  border-color: #808080;
}

.c19:checked {
  background: #222222;
  border-color: #222222;
}

.c19:disabled {
  pointer-events: none;
}

.c21:focus-visible {
  box-shadow: 0 0 0 0.125rem rgba(255,229,85,100%);
}

.c9 {
  object-fit: contain;
}

.c26 {
  -webkit-filter: invert(98%) sepia(98%) saturate(0%) hue-rotate(328deg) brightness(102%) contrast(102%);
  filter: invert(98%) sepia(98%) saturate(0%) hue-rotate(328deg) brightness(102%) contrast(102%);
  object-fit: contain;
}

.c24 {
  pointer-events: none;
  opacity: 0;
}

input:checked + .c22 {
  opacity: 1;
}

.c3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c3:has(input:disabled) {
  cursor: default;
}

.c3:has(input:disabled) #download-card-title {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2:has(input:focus-visible) {
  box-shadow: 0 0 0 0.125rem rgba(255,229,85,100%), 0 0 0 0.3rem rgba(87,87,87,100%);
}

@media (hover:hover) {
  .c19:hover:not(:disabled) {
    border-color: #222222;
  }
}

@media (hover:hover) {
  .c20:hover:not(.c18:checked):not(.c18:disabled)::after {
    content: "";
    position: absolute;
    top: 50%;
    left: 50%;
    width: 60%;
    height: 60%;
    -webkit-transform: translate(-50%,-50%);
    -ms-transform: translate(-50%,-50%);
    transform: translate(-50%,-50%);
    border-radius: 0.125rem;
    background: #222222;
  }
}

@media (hover:hover) {
  .c2:hover:not(:has(input:disabled),:active) {
    background: #f2f2f2;
  }

  .c2:hover:not(:has(input:disabled),:active) #download-card-title {
    -webkit-text-decoration: underline;
    text-decoration: underline;
  }

  .c2:active:not(:has(input:disabled)) #download-card-title {
    -webkit-text-decoration: underline;
    text-decoration: underline;
  }
}

<div>
  <div
    class="c0 c1 c2"
  >
    <label
      class="c3"
    >
      <div
        class="c4 c5"
      >
        <div
          class="c6 c7"
        >
          <span
            class="c8"
          >
            <img
              alt=""
              class="c9"
              data-nimg="fill"
              decoding="async"
              loading="lazy"
              src="https://res.cloudinary.com/mock-cloudinary-cloud/image/upload/v1699953657/icons/hz4l3iq6i68kazvkvorq.svg"
              style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
            />
          </span>
        </div>
        <div
          class="c10 c11"
        >
          <div
            class="c12"
            id="download-card-title"
          >
            TITLE
          </div>
          <div
            class="c13"
          >
            FILE_SIZE
          </div>
          <div
            class="c4 c14"
          >
            <div
              class="c13"
            >
              FORMAT
            </div>
          </div>
        </div>
      </div>
      <div
        class="c4 c1"
      >
        <div
          class="c15 c16"
        >
          <div
            class="c17"
          >
            <input
              class="c18 c19 c20 c21"
              id="checkbox-1"
              name="default"
              type="checkbox"
              value="Option 1"
            />
            <div
              class="c22 c23 c24"
            >
              <span
                class="c25"
              >
                <img
                  alt=""
                  class="c26"
                  data-nimg="fill"
                  decoding="async"
                  loading="lazy"
                  src="https://res.cloudinary.com/mock-cloudinary-cloud/image/upload/v1699954310/icons/efd3esaor6zqk7seh6kt.svg"
                  style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
                />
              </span>
            </div>
          </div>
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`OakDownloadCard matches snapshot without fileSizeSlot 1`] = `
.c0 {
  overflow: hidden;
  width: 100%;
  color: #222222;
  background: #ffffff;
  border: 0.125rem solid;
  border-radius: 0.25rem;
  font-family: --var(google-font),Lexend,sans-serif;
  overflow: hidden;
}

.c4 {
  font-family: --var(google-font),Lexend,sans-serif;
}

.c6 {
  padding: 0.75rem;
  background: #ffe555;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c8 {
  position: relative;
  width: 3rem;
  min-width: 3rem;
  height: 3rem;
  min-height: 3rem;
  display: block;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c10 {
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.75rem;
  padding-bottom: 0.75rem;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c12 {
  font-family: --var(google-font),Lexend,sans-serif;
  font-weight: 500;
  font-size: 1rem;
  line-height: 1.5rem;
  -webkit-letter-spacing: -0.005rem;
  -moz-letter-spacing: -0.005rem;
  -ms-letter-spacing: -0.005rem;
  letter-spacing: -0.005rem;
}

.c14 {
  color: #575757;
  font-family: --var(google-font),Lexend,sans-serif;
  font-weight: 300;
  font-size: 0.875rem;
  line-height: 1.25rem;
  -webkit-letter-spacing: -0.005rem;
  -moz-letter-spacing: -0.005rem;
  -ms-letter-spacing: -0.005rem;
  letter-spacing: -0.005rem;
}

.c15 {
  padding-right: 1rem;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c17 {
  position: relative;
  width: 1.5rem;
  height: 1.5rem;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c23 {
  position: absolute;
  top: 0rem;
  left: 0rem;
  width: 1.5rem;
  height: 1.5rem;
  padding: 0rem;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c25 {
  position: relative;
  width: 100%;
  min-width: 100%;
  height: 100%;
  min-height: 100%;
  display: block;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  gap: 0.25rem;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.5rem;
}

.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c19 {
  -webkit-appearance: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
  margin: 0;
  outline: none;
  border: 0.125rem solid;
  border-color: #222222;
  border-radius: 0.125rem;
  width: 1.5rem;
  height: 1.5rem;
  border-color: #808080;
}

.c19:checked {
  background: #222222;
  border-color: #222222;
}

.c19:disabled {
  pointer-events: none;
}

.c21:focus-visible {
  box-shadow: 0 0 0 0.125rem rgba(255,229,85,100%);
}

.c9 {
  object-fit: contain;
}

.c26 {
  -webkit-filter: invert(98%) sepia(98%) saturate(0%) hue-rotate(328deg) brightness(102%) contrast(102%);
  filter: invert(98%) sepia(98%) saturate(0%) hue-rotate(328deg) brightness(102%) contrast(102%);
  object-fit: contain;
}

.c24 {
  pointer-events: none;
  opacity: 0;
}

input:checked + .c22 {
  opacity: 1;
}

.c3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c3:has(input:disabled) {
  cursor: default;
}

.c3:has(input:disabled) #download-card-title {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2:has(input:focus-visible) {
  box-shadow: 0 0 0 0.125rem rgba(255,229,85,100%), 0 0 0 0.3rem rgba(87,87,87,100%);
}

@media (hover:hover) {
  .c19:hover:not(:disabled) {
    border-color: #222222;
  }
}

@media (hover:hover) {
  .c20:hover:not(.c18:checked):not(.c18:disabled)::after {
    content: "";
    position: absolute;
    top: 50%;
    left: 50%;
    width: 60%;
    height: 60%;
    -webkit-transform: translate(-50%,-50%);
    -ms-transform: translate(-50%,-50%);
    transform: translate(-50%,-50%);
    border-radius: 0.125rem;
    background: #222222;
  }
}

@media (hover:hover) {
  .c2:hover:not(:has(input:disabled),:active) {
    background: #f2f2f2;
  }

  .c2:hover:not(:has(input:disabled),:active) #download-card-title {
    -webkit-text-decoration: underline;
    text-decoration: underline;
  }

  .c2:active:not(:has(input:disabled)) #download-card-title {
    -webkit-text-decoration: underline;
    text-decoration: underline;
  }
}

<div>
  <div
    class="c0 c1 c2"
  >
    <label
      class="c3"
    >
      <div
        class="c4 c5"
      >
        <div
          class="c6 c7"
        >
          <span
            class="c8"
          >
            <img
              alt=""
              class="c9"
              data-nimg="fill"
              decoding="async"
              loading="lazy"
              src="https://res.cloudinary.com/mock-cloudinary-cloud/image/upload/v1699953657/icons/hz4l3iq6i68kazvkvorq.svg"
              style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
            />
          </span>
        </div>
        <div
          class="c10 c11"
        >
          <div
            class="c12"
            id="download-card-title"
          >
            TITLE
          </div>
          <div
            class="c4 c13"
          >
            <div
              class="c14"
            >
              FORMAT
            </div>
          </div>
        </div>
      </div>
      <div
        class="c4 c1"
      >
        <div
          class="c15 c16"
        >
          <div
            class="c17"
          >
            <input
              class="c18 c19 c20 c21"
              id="checkbox-1"
              name="default"
              type="checkbox"
              value="Option 1"
            />
            <div
              class="c22 c23 c24"
            >
              <span
                class="c25"
              >
                <img
                  alt=""
                  class="c26"
                  data-nimg="fill"
                  decoding="async"
                  loading="lazy"
                  src="https://res.cloudinary.com/mock-cloudinary-cloud/image/upload/v1699954310/icons/efd3esaor6zqk7seh6kt.svg"
                  style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
                />
              </span>
            </div>
          </div>
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`OakDownloadCard renders an editable tag when isEditable is true 1`] = `
.c0 {
  overflow: hidden;
  width: 100%;
  color: #222222;
  background: #ffffff;
  border: 0.125rem solid;
  border-radius: 0.25rem;
  font-family: --var(google-font),Lexend,sans-serif;
  overflow: hidden;
}

.c4 {
  font-family: --var(google-font),Lexend,sans-serif;
}

.c6 {
  padding: 0.75rem;
  background: #ffe555;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c8 {
  position: relative;
  width: 3rem;
  min-width: 3rem;
  height: 3rem;
  min-height: 3rem;
  display: block;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c10 {
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.75rem;
  padding-bottom: 0.75rem;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c12 {
  font-family: --var(google-font),Lexend,sans-serif;
  font-weight: 700;
  font-size: 1rem;
  line-height: 1.5rem;
  -webkit-letter-spacing: -0.005rem;
  -moz-letter-spacing: -0.005rem;
  -ms-letter-spacing: -0.005rem;
  letter-spacing: -0.005rem;
}

.c14 {
  color: #575757;
  font-family: --var(google-font),Lexend,sans-serif;
  font-weight: 300;
  font-size: 0.875rem;
  line-height: 1.25rem;
  -webkit-letter-spacing: -0.005rem;
  -moz-letter-spacing: -0.005rem;
  -ms-letter-spacing: -0.005rem;
  letter-spacing: -0.005rem;
}

.c15 {
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  padding-top: 0.25rem;
  padding-bottom: 0.25rem;
  background: #b0e2de;
  border-radius: 0.375rem;
  font-family: --var(google-font),Lexend,sans-serif;
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0.0115rem;
  -moz-letter-spacing: 0.0115rem;
  -ms-letter-spacing: 0.0115rem;
  letter-spacing: 0.0115rem;
}

.c18 {
  padding-right: 1rem;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c20 {
  position: relative;
  width: 1.5rem;
  height: 1.5rem;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c26 {
  position: absolute;
  top: 0rem;
  left: 0rem;
  width: 1.5rem;
  height: 1.5rem;
  padding: 0rem;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c28 {
  position: relative;
  width: 100%;
  min-width: 100%;
  height: 100%;
  min-height: 100%;
  display: block;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  gap: 0.25rem;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.5rem;
}

.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-self: flex-end;
  -ms-flex-item-align: end;
  align-self: flex-end;
  gap: 0.5rem;
}

.c19 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c22 {
  -webkit-appearance: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
  margin: 0;
  outline: none;
  border: 0.125rem solid;
  border-color: #222222;
  border-radius: 0.125rem;
  width: 1.5rem;
  height: 1.5rem;
  border-color: #808080;
}

.c22:checked {
  background: #222222;
  border-color: #222222;
}

.c22:disabled {
  pointer-events: none;
}

.c24:focus-visible {
  box-shadow: 0 0 0 0.125rem rgba(255,229,85,100%);
}

.c9 {
  object-fit: contain;
}

.c29 {
  -webkit-filter: invert(98%) sepia(98%) saturate(0%) hue-rotate(328deg) brightness(102%) contrast(102%);
  filter: invert(98%) sepia(98%) saturate(0%) hue-rotate(328deg) brightness(102%) contrast(102%);
  object-fit: contain;
}

.c27 {
  pointer-events: none;
  opacity: 0;
}

input:checked + .c25 {
  opacity: 1;
}

.c17 {
  font-family: --var(google-font),Lexend,sans-serif;
}

.c3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c3:has(input:disabled) {
  cursor: default;
}

.c3:has(input:disabled) #download-card-title {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2:has(input:focus-visible) {
  box-shadow: 0 0 0 0.125rem rgba(255,229,85,100%), 0 0 0 0.3rem rgba(87,87,87,100%);
}

@media (hover:hover) {
  .c22:hover:not(:disabled) {
    border-color: #222222;
  }
}

@media (hover:hover) {
  .c23:hover:not(.c21:checked):not(.c21:disabled)::after {
    content: "";
    position: absolute;
    top: 50%;
    left: 50%;
    width: 60%;
    height: 60%;
    -webkit-transform: translate(-50%,-50%);
    -ms-transform: translate(-50%,-50%);
    transform: translate(-50%,-50%);
    border-radius: 0.125rem;
    background: #222222;
  }
}

@media (hover:hover) {
  .c2:hover:not(:has(input:disabled),:active) {
    background: #f2f2f2;
  }

  .c2:hover:not(:has(input:disabled),:active) #download-card-title {
    -webkit-text-decoration: underline;
    text-decoration: underline;
  }

  .c2:active:not(:has(input:disabled)) #download-card-title {
    -webkit-text-decoration: underline;
    text-decoration: underline;
  }
}

<div>
  <div
    class="c0 c1 c2"
  >
    <label
      class="c3"
    >
      <div
        class="c4 c5"
      >
        <div
          class="c6 c7"
        >
          <span
            class="c8"
          >
            <img
              alt=""
              class="c9"
              data-nimg="fill"
              decoding="async"
              loading="lazy"
              src="https://res.cloudinary.com/mock-cloudinary-cloud/image/upload/v1699953657/icons/hz4l3iq6i68kazvkvorq.svg"
              style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
            />
          </span>
        </div>
        <div
          class="c10 c11"
        >
          <div
            class="c12"
            id="download-card-title"
          >
            TITLE
          </div>
          <div
            class="c4 c13"
          >
            <div
              class="c14"
            >
              FORMAT
            </div>
            <div
              class="c15 c16"
            >
              <label
                class="c17"
              >
                Editable
              </label>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c4 c1"
      >
        <div
          class="c18 c19"
        >
          <div
            class="c20"
          >
            <input
              class="c21 c22 c23 c24"
              id="checkbox-1"
              name="default"
              type="checkbox"
              value="Option 1"
            />
            <div
              class="c25 c26 c27"
            >
              <span
                class="c28"
              >
                <img
                  alt=""
                  class="c29"
                  data-nimg="fill"
                  decoding="async"
                  loading="lazy"
                  src="https://res.cloudinary.com/mock-cloudinary-cloud/image/upload/v1699954310/icons/efd3esaor6zqk7seh6kt.svg"
                  style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
                />
              </span>
            </div>
          </div>
        </div>
      </div>
    </label>
  </div>
</div>
`;
